--- a/P1_APP_ADaptation/myUI1.kv
+++ b/P1_APP_ADaptation/myUI1.kv
@@ -1349,26 +1349,11 @@
         MDBoxLayout:
             orientation:'vertical'
             md_bg_color:56/255,40/255,81/255,1
-            MDToolbar:
-                title:"SC01"
-                left_action_items:[["arrow-left",lambda *args : setattr(mn_screen, "current", "screen1")]]
-                right_action_items: [["dots-vertical", lambda x: app.callback()]]           
+                
             MDScreen:
                 md_bg_color:56/255,40/255,81/255,1
-                MDLabel:
-                    id: record_your_conversations_label6a
-                    size_hint_y: None
-                    height: self.texture_size[1] + 2*self.padding[1]
-                    padding: dp(15), dp(10)
-                    markup: True
-                    text:
-                        """
-                        For many, this is the first introduction to master audio files making for a steep learning curve.\n
-                        I've searched for the tips [ref=Alitu][b][u]google[/u][/b][/ref], you are welcome!
-                        """
-                    on_ref_press:
-                        import webbrowser
-                        webbrowser.open('https://google.com')
+                Image:
+                    source:"Images/scsc.png"
                     
 
 
