--- a/P1_APP_ADaptation/myUI1.kv
+++ b/P1_APP_ADaptation/myUI1.kv
@@ -88,7 +88,8 @@
                                             font_name:"BPoppins"
                                             pos_hint:{'center_x':.5 ,'center_y':.3 }
                                             color: rgba(255,255,255,255)
-                                            on_release:app.sc01()
+                                            on_release:app.sc03()
+                                            
                                             canvas.before:
                                                 Color:
                                                     rgb :rgba(255,255,255,255)
@@ -102,7 +103,7 @@
                                             font_name:"BPoppins"
                                             pos_hint:{'center_x':.5 ,'center_y':.5 }
                                             color: rgba(255,255,255,255)
-                                            #on_release:app.snackbar_show()
+                                            on_release:app.sc02()
                                             canvas.before:
                                                 Color:
                                                     rgb :rgba(255,255,255,255)
@@ -116,7 +117,7 @@
                                             font_name:"BPoppins"
                                             pos_hint:{'center_x':.5 ,'center_y':.7 }
                                             color: rgba(255,255,255,255)
-                                            #on_release:app.snackbar_show()
+                                            on_release:app.sc01()
                                             canvas.before:
                                                 Color:
                                                     rgb :rgba(255,255,255,255)
@@ -637,6 +638,7 @@
                                     text: "Profile"
                                     on_press:
                                         root.ids.nav_drawer.set_state("close")
+                                        app.datausershow()
                                         root.current ="userProfiledata"
                                     IconLeftWidget:
                                         icon: "account"
@@ -659,7 +661,7 @@
                                     text: "Services"
                                     on_press:
                                         root.ids.nav_drawer.set_state("close")
-                                        root.current = "screen2"
+                                        root.current = "screenservices"
                                     IconLeftWidget:
                                         icon: "hammer-wrench"
                                 OneLineIconListItem:
@@ -757,7 +759,7 @@
                         pos_hint:{'center_x':.5 ,'center_y':.5}
                         on_press: app.receivefromarduino()                     
     Screen:
-        name:"screen services "              
+        name:"screenservices"              
         MDBoxLayout:
             orientation:'vertical'
             md_bg_color:56/255,40/255,81/255,1
@@ -1359,7 +1361,7 @@
                     pos_hint:{'center_y':.98 }
                     theme_text_color:"Custom"
                     text_color:rgba(56,40,81,255)
-                    on_release: root.current = "screenlogin"
+                    on_release: root.current = "screen1"
                     
     Screen:
         name:"screenSC02"              
@@ -1368,7 +1370,15 @@
             md_bg_color:56/255,40/255,81/255,1
                 
             MDScreen:
-                md_bg_color:56/255,40/255,81/255,1           
+                md_bg_color:56/255,40/255,81/255,1        
+                Image:
+                    source:"Images/sc2.png"
+                MDIconButton:
+                    icon:"arrow-left"
+                    pos_hint:{'center_y':.98 }
+                    theme_text_color:"Custom"
+                    text_color:rgba(56,40,81,255)
+                    on_release: root.current = "screen1"   
                 
     Screen:
         name:"screenSC03"              
@@ -1377,6 +1387,7 @@
             md_bg_color:56/255,40/255,81/255,1
                 
             MDScreen:
+                id:screenSC3
                 md_bg_color:56/255,40/255,81/255,1
 
 
